# copra

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeCache.txt  CMakeLists.txt  README.md  _config.yml  build_and_install.sh  build_and_install_config  optional_qps.cmake
.github/workflows/: build.yml  package.yml
.github/workflows/sources/: package.yml
binding/python/: CMakeLists.txt  CopraBindings.cpp  MPController.cpp  __init__.py  previewController_ext.cpp
binding/python/tests/: CMakeLists.txt  TestCopraBindings.py  TestMPController.py  fort.9  pyTests.py
cmake/: solverConfig.cmake.in
debian/: changelog  control  copyright  libcopra-dev.install  libcopra-doc.doc-base  libcopra-doc.lintian-overrides  libcopra1.install  rules  source.lintian-overrides
doc/: Doxyfile.extra.in  mainpage.md
doxygen/HEAD/: AutoSpan_8h.html  AutoSpan_8h__incl.dot  AutoSpan_8h_source.html  GUROBISolver_8h.html  GUROBISolver_8h__incl.dot  GUROBISolver_8h_source.html  InitialStateLMPC_8h.html  InitialStateLMPC_8h__incl.dot  InitialStateLMPC_8h_source.html  LMPC_8h.html  LMPC_8h__dep__incl.dot  LMPC_8h__incl.dot  LMPC_8h_source.html  LSSOLSolver_8h.html  LSSOLSolver_8h__incl.dot  LSSOLSolver_8h_source.html  OSQPSolver_8h.html  OSQPSolver_8h__incl.dot  OSQPSolver_8h_source.html  PreviewSystem_8h.html  PreviewSystem_8h__dep__incl.dot  PreviewSystem_8h__incl.dot  PreviewSystem_8h_source.html  QLDSolver_8h.html  QLDSolver_8h__incl.dot  QLDSolver_8h_source.html  QuadProgSolver_8h.html  QuadProgSolver_8h__dep__incl.dot  QuadProgSolver_8h__incl.dot  QuadProgSolver_8h_source.html  SolverInterface_8h.html  SolverInterface_8h__dep__incl.dot  SolverInterface_8h__incl.dot  SolverInterface_8h_source.html  a00002.html  a00002.js  a00005.html  a00008.html  a00008.js  a00011.html  (+516 more)
doxygen/HEAD/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  (+62 more)
include/: AutoSpan.h  Constraints.h  GUROBISolver.h  InitialStateLMPC.h  LMPC.h  LSSOLSolver.h  MPC.h  OSQPSolver.h  PreviewController.h  PreviewSystem.h  QLDSolver.h  QuadProgSolver.h  SolverInterface.h  api.h  constraints.h  costFunctions.h  debugUtils.h  previewController.h  solverUtils.h  typedefs.h
src/: AutoSpan.cpp  CMakeLists.txt  Constrains.cpp  Constrains.h  Constraints.cpp  Constraints.h  GUROBISolver.cpp  GUROBISolver.h  InitialStateLMPC.cpp  LMPC.cpp  LSSOLSolver.cpp  LSSOLSolver.h  MPC.cpp  OSQPSolver.cpp  PreviewController.cpp  PreviewController.h  PreviewSystem.cpp  PreviewSystem.h  QLDSolver.cpp  QLDSolver.h  QuadProgSolver.cpp  QuadProgSolver.h  SolverInterface.cpp  SolverInterface.h  constraints.cpp  costFunctions.cpp  debugUtils.cpp  debugUtils.h  previewController.cpp  previewController.h  previewSystem.cpp  previewSystem.h  solverUtils.cpp  solverUtils.h  solvers.cpp  solvers.h  test_solver.cpp
tests/: CMakeLists.txt  TestLMPC.cpp  TestLMPC_InitialState.cpp  TestMPC.cpp  TestPreviewControl.cpp  TestSolvers.cpp  doctest.h  systems.h  tools.cpp  tools.h
